--- a/HTML&CSS/style.css
+++ b/HTML&CSS/style.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 body{
     background-color: rgb(163, 163, 163);
+    font-family: Verdana, Tahoma, sans-serif;
 }
 #t1 {
     color: blue;
@@ -13,14 +14,23 @@ body{
     color: blue;
     font-size: 16px;
     font-style: italic;
+    margin-bottom: 15px;
 }
 .ar1{
     padding: 16px;
-    border: 2px solid black;
-    margin: 15px 0px 0px;
+    border: 3px solid black;
+    margin-bottom: 15px;
     color: #505050;
     border-radius: 5px;
+    background-color: white;
 }
 .im{
-    border-radius: 5px;
+    border: 1px black;
+    border-radius: 50px;
+    width: auto;
+
+
+}
+li{
+    list-style: none;
 }
