--- a/Projeto reciando interface do netflix/style.css
+++ b/Projeto reciando interface do netflix/style.css
@@ -44,9 +44,10 @@ header nav a:hover{
 /* trabalhando com filme */
 .filme-principal{
     font-size: 16px;
-    background-image: url('imagem/rick2.jpg'),linear-gradient(rgba(0,0,0,.50), )(rgba(0,0,0,.50)100%);
+    background-image: linear-gradient(rgba(0,0,0,.50)), (rgba(0, 0, 0, .50)100%);
+    background-image: url('imagem/rick3.jpg');
     height: 400px;
-    background-size:  cover;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -55,8 +56,28 @@ header nav a:hover{
 
 .filme-principal .descricao{
     margin-bottom: 40px;
+    margin-top: 10px;
 }
 .titulo{
+    margin-top: 30%;
     font-size: 40px;
+    font-family: 'Courier New', Courier, monospace;
+}
+.botao{
+    background-color: rgba(0,0,0,.50);
+    border: none;
+    color: white;
+    padding: 15px 30px;
+    margin-right: 15px;
+    font-size: 12px;
+    cursor: pointer;
+    transition: .3s;
+}
+.botao:hover{
+    background-color: white;
+    color: black;
 
+}
+.botao i{
+    margin-right: 8px;
 }
