--- a/Projeto reciando interface do netflix/style.css
+++ b/Projeto reciando interface do netflix/style.css
@@ -45,7 +45,7 @@ header nav a:hover{
 .filme-principal{
     font-size: 16px;
     background-image: linear-gradient(rgba(0,0,0,.50)), (rgba(0, 0, 0, .50)100%);
-    background-image: url('imagem/rick3.jpg');
+    background-image: url('..//Projeto\ reciando\ interface\ do\ netflix/imagem/rick2.jpg');
     height: 400px;
     background-size: cover;
     display: flex;
