--- a/Projeto reciando interface do netflix/style.css
+++ b/Projeto reciando interface do netflix/style.css
@@ -20,7 +20,7 @@ body{
     color: white;
 }
 .container{
-    border: 1px solid black;
+    border: 1px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -45,7 +45,7 @@ header nav a:hover{
 .filme-principal{
     font-size: 16px;
     background-image: linear-gradient(rgba(0,0,0,.50)), (rgba(0, 0, 0, .50)100%);
-    background-image: url('..//Projeto\ reciando\ interface\ do\ netflix/imagem/rick2.jpg');
+    background-image: url('..//Projeto\ reciando\ interface\ do\ netflix/imagem/rick4.jpg');
     height: 400px;
     background-size: cover;
     display: flex;
@@ -86,4 +86,12 @@ header nav a:hover{
 }
 .filme-principal .container{
     width: 70%;
+}
+.box-filme{
+    height: 100%;
+    width: 100%;
+    display: block;
+}
+.corrosel-filme{
+    margin-top: 5px;
 }
