--- a/Angular/Aula 1 Primeiro projeto/couser-manager/src/app/app.component.html
+++ b/Angular/Aula 1 Primeiro projeto/couser-manager/src/app/app.component.html
@@ -1,6 +1,3 @@
-{(couser-manager)}
-<br>
-
-{{name}}
-
-<input [(ngModel)]="name" name="name"> 
+<div class="container">
+ <app-course-list></app-course-list>   
+</div>
