--- a/JavaScript/jogo da velha/style.css
+++ b/JavaScript/jogo da velha/style.css
@@ -3,7 +3,7 @@ body{
 }
 
 main{
-    background-color: #8697A6;
+    background-color: #cf9e9859;
     display: block;
     padding: 50px;
     margin-top: 30px;
