--- a/JavaScript/Jogo Genius/style.css
+++ b/JavaScript/Jogo Genius/style.css
@@ -1,6 +1,6 @@
 body{
     margin: 0;
-    background-color: teal;
+    background-color: rgb(41, 202, 202);
 }
 
 .main-game{
@@ -13,36 +13,40 @@ body{
 
 .genius{
     display: grid;
-    grid-template-areas: 'verde vermelho'
-    'amarelo azul';
+    /*grid-template-areas: 'verde vermelho'
+    'amarelo azul';*/
     grid-gap: 10px;
     border: 1px solid #ffffff;
     background-color: #ffffff;
     border-radius: 100%;
     width: 700px;
     height: 700px;
+    background-image: url(genius.gif);
+    background-repeat: no-repeat;
+    background-position: center;
+
 }
 
-.blue{
+div.blue{
     grid-area: azul;
     background-color: blue;
     border-bottom-right-radius: 100%;
 }
 
-.red{
+div.red{
     grid-area: vermelhor;
     background-color: red;
     border-top-right-radius: 100%;
     
 }
 
-.yellow{
+div.yellow{
     grid-area: amarelo;
     background-color:yellow;
     border-bottom-left-radius: 100%;
 }
 
-.green{
+div.green{
     grid-area: verde;
     background-color: green;
     border-top-left-radius: 100%;
